Fix hr overflow

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ h3{
 hr{
     border:none;
     border-bottom:2px solid black;
+    width:70%;
+    margin:0;
 }
 @media screen and (max-width:700px){
     h1{
